<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MobileSwamp</string>
    <string name="tagline">Built for the\nmodern mobile era</string>
    <string name="subtitle">Join thousands of users already on the platform. Get started in seconds.</string>
    <string name="btn_register">Create Free Account</string>
    <string name="btn_learn_more">Learn More</string>
    <string name="register_heading">Create your account</string>
    <string name="register_subheading">Fill in your details to get started</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_create_account">Create Account</string>
</resources>
